@@ -43,11 +43,9 @@ CXXFLAGS     = -O3 -Wall -fPIC -DSTANDALONE -I. $(ROOTCXXFLAGS)
 ROOTLIBS     = $(shell $(ROOTSYS)/bin/root-config --libs)
 
 OBJS         = $(TMPDIR)/JetCorrectorParameters.o \
-	       $(TMPDIR)/JetCorrectorParameters_dict.o \
 	       $(TMPDIR)/SimpleJetCorrector.o \
-	       $(TMPDIR)/SimpleJetCorrector_dict.o \
                $(TMPDIR)/FactorizedJetCorrector.o \
-               $(TMPDIR)/FactorizedJetCorrector_dict.o
+               $(TMPDIR)/JetMETObjects_dict.o
 
 LIB          = libJetMETObjects.so
 
@@ -65,12 +63,7 @@ lib: $(OBJS)
 
 clean:
 	rm -rf $(OBJS) $(LIBDIR)/$(LIB) CondFormats \
-	       $(TMPDIR)/JetCorrectorParameters_dict.h \
-	       $(TMPDIR)/JetCorrectorParameters_dict.cc \
-	       $(TMPDIR)/SimpleJetCorrector_dict.h \
-	       $(TMPDIR)/SimpleJetCorrector_dict.cc \
-	       $(TMPDIR)/FactorizedJetCorrector_dict.h \
-	       $(TMPDIR)/FactorizedJetCorrector_dict.cc
+	       $(TMPDIR)/JetMETObjects_dict.h $(TMPDIR)/JetMETObjects_dict.cc
 
 
 ################################################################################
@@ -82,55 +75,30 @@ $(TMPDIR)/JetCorrectorParameters.o: interface/JetCorrectorParameters.h \
 	$(CXX) $(CXXFLAGS) -c src/JetCorrectorParameters.cc \
 	-o $(TMPDIR)/JetCorrectorParameters.o 
 
-$(TMPDIR)/JetCorrectorParameters_dict.o: $(TMPDIR)/JetCorrectorParameters_dict.cc
-	$(CXX) $(CXXFLAGS) -I$(TMPDIR) -c $(TMPDIR)/JetCorrectorParameters_dict.cc \
-	-o $(TMPDIR)/JetCorrectorParameters_dict.o
-
-$(TMPDIR)/JetCorrectorParameters_dict.cc: interface/JetCorrectorParameters.h \
-					  interface/JetCorrectorParameters_linkdef.h
-	rm -rf $(TMPDIR)/JetCorrectorParameters_dict.h
-	rm -rf $(TMPDIR)/JetCorrectorParameters_dict.cc
-	$(ROOTSYS)/bin/rootcint -f $(TMPDIR)/JetCorrectorParameters_dict.cc \
-	-c -I$(TMPDIR) \
-	interface/JetCorrectorParameters.h \
-	interface/JetCorrectorParameters_linkdef.h
-
-
-
 $(TMPDIR)/SimpleJetCorrector.o: interface/SimpleJetCorrector.h \
 				    src/SimpleJetCorrector.cc
 	$(CXX) $(CXXFLAGS) -c src/SimpleJetCorrector.cc \
 	-o $(TMPDIR)/SimpleJetCorrector.o 
-
-$(TMPDIR)/SimpleJetCorrector_dict.o: $(TMPDIR)/SimpleJetCorrector_dict.cc
-	$(CXX) $(CXXFLAGS) -I$(TMPDIR) -c $(TMPDIR)/SimpleJetCorrector_dict.cc \
-	-o $(TMPDIR)/SimpleJetCorrector_dict.o
-
-$(TMPDIR)/SimpleJetCorrector_dict.cc: interface/SimpleJetCorrector.h \
-					  interface/SimpleJetCorrector_linkdef.h
-	rm -rf $(TMPDIR)/SimpleJetCorrector_dict.h
-	rm -rf $(TMPDIR)/SimpleJetCorrector_dict.cc
-	$(ROOTSYS)/bin/rootcint -f $(TMPDIR)/SimpleJetCorrector_dict.cc \
-	-c -I$(TMPDIR) \
-	interface/SimpleJetCorrector.h \
-	interface/SimpleJetCorrector_linkdef.h
-
-
 
 $(TMPDIR)/FactorizedJetCorrector.o: interface/FactorizedJetCorrector.h \
 				    src/FactorizedJetCorrector.cc
 	$(CXX) $(CXXFLAGS) -c src/FactorizedJetCorrector.cc \
 	-o $(TMPDIR)/FactorizedJetCorrector.o 
 
-$(TMPDIR)/FactorizedJetCorrector_dict.o: $(TMPDIR)/FactorizedJetCorrector_dict.cc
-	$(CXX) $(CXXFLAGS) -I$(TMPDIR) -c $(TMPDIR)/FactorizedJetCorrector_dict.cc \
-	-o $(TMPDIR)/FactorizedJetCorrector_dict.o
 
-$(TMPDIR)/FactorizedJetCorrector_dict.cc: interface/FactorizedJetCorrector.h \
-					  interface/FactorizedJetCorrector_linkdef.h
-	rm -rf $(TMPDIR)/FactorizedJetCorrector_dict.h
-	rm -rf $(TMPDIR)/FactorizedJetCorrector_dict.cc
-	$(ROOTSYS)/bin/rootcint -f $(TMPDIR)/FactorizedJetCorrector_dict.cc \
+$(TMPDIR)/JetMETObjects_dict.o: $(TMPDIR)/JetMETObjects_dict.cc
+	$(CXX) $(CXXFLAGS) -I$(TMPDIR) -c $(TMPDIR)/JetMETObjects_dict.cc \
+	-o $(TMPDIR)/JetMETObjects_dict.o
+
+$(TMPDIR)/JetMETObjects_dict.cc: interface/JetCorrectorParameters.h \
+				 interface/SimpleJetCorrector.h \
+				 interface/FactorizedJetCorrector.h \
+				 interface/Linkdef.h
+	rm -rf $(TMPDIR)/JetMETObjects_dict.h
+	rm -rf $(TMPDIR)/JetMETObjects_dict.cc
+	$(ROOTSYS)/bin/rootcint -f $(TMPDIR)/JetMETObjects_dict.cc \
 	-c -I$(TMPDIR) \
+	interface/JetCorrectorParameters.h \
+	interface/SimpleJetCorrector.h \
 	interface/FactorizedJetCorrector.h \
-	interface/FactorizedJetCorrector_linkdef.h
+	interface/Linkdef.h
