@@ -1,8 +1,0 @@
-#ifdef __CINT__
-#pragma link off all globals;
-#pragma link off all classes;
-#pragma link off all functions;
-#pragma link C++ nestedclasses;
-
-#pragma link C++ class SimpleJetCorrector+;
-#endif // __CINT__
