@@ -1,3 +1,9 @@
+2009-11-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* remove interface/*_linkdef.h files, replace by single file
+	interface/Linkdef.h
+	* adjust standalone Makefile accordingly
+
 2009-11-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* added interface/*_linkdef.h files in order to enable Makefile to
